@@ -1,6 +1,6 @@
 # GnuCOBOL compiler configuration
 #
-# Copyright (C) 2001-2012, 2014-2022 Free Software Foundation, Inc.
+# Copyright (C) 2001-2012, 2014-2023 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 # Ron Norman
 #
@@ -21,7 +21,7 @@
 
 
 # Value: any string
-name: "MVS/VM COBOL"
+name: "IBM COBOL for MVS & VM"
 
 # Value: enum (see default.conf and cobc/cobc.h for details)
 standard-define			3
