@@ -1,4 +1,8 @@
 
+2023-06-30  Simon Sobisch <simonsobisch@gnu.org>
+
+	* config.h.in: updated for OrangeC 6.0.70.2
+
 2023-05-27  Simon Sobisch <simonsobisch@gnu.org>
 
 	* makedist.cmd: first addition for CI output
